Fixed scrolling on ie8

--- a/styles/shCore.css
+++ b/styles/shCore.css
@@ -54,7 +54,7 @@
   margin: 1em 0 1em 0 !important;
   position: relative !important;
   font-size: 1em !important;
-  overflow-y: hidden !important;
+  overflow-y: auto !important;
 }
 
 .syntaxhighlighter.source {
